# weldb

./: .gitignore  README.md  SKILL.md  ascii_art.txt  drawing_spec.md  drawing_spec_boiler.md  drawing_spec_iron.md  drawing_spec_pipeline.md  mcp_app.py  package.py  project_spec.md  pyproject.toml  render_spec.md  render_spec_boiler.md  render_spec_iron.md  render_spec_pipeline.md  weld_naming_convention.md  weldb.skill  weldb_visual_editor.py
examples/: E7.weldb  N5.weldb  N5_welds.csv  N5_welds.json  area_welds.csv  linear_welds.csv  point_welds.csv
examples/adjacent_panels/: N5.weldb  N6.weldb
examples/antler_panel/: N3.weldb  N5.weldb
examples/cladding_full_panel/: N21.weldb
examples/cladding_partial_panel/: N22.weldb
examples/cladding_repair/: N23.weldb
examples/complex_panel/: N17.weldb
examples/conventional_panel/: N5.weldb
examples/conventional_panel_extended_membrane_style/: N19.weldb
examples/conventional_panel_simplified_membrane_style/: N2.weldb
examples/dutchman_single_tube/: N12.weldb
examples/dutchman_used_to_replace_failed_weld/: N10.weldb
examples/dutchmen_single_tube_group/: N18.weldb
examples/large_panel/: N1.weldb
examples/overlapping_panels/: N5L.weldb  N5U.weldb  N7.weldb  N8.weldb
examples/panel_with_clips/: N5.weldb
examples/panel_with_clips_and_two_views/: N9.weldb
examples/panel_with_repair_dutchman/: N5.weldb
examples/port_panel/: N11.weldb  N5.weldb
examples/single_tube_dutchman/: N5.weldb
examples/stacked_panels/: N13.weldb  N14.weldb  N5L.weldb  N5U.weldb
examples/three_revision_panel/: N16.weldb
examples/transition_belt_panel/: N20.weldb
references/: drawing_spec.md  html_artifact_editor.md  panel_naming_convention.md  project_spec.md  render_spec.md  weldb_design_philosophy.md
scripts/: _panel_common.py  archive_panel.py  build_weld_csvs.py  create_panel.py  create_panel_extended_membrane.py  create_panels.py  list_examples.py  query_welds.py  regenerate_artifacts.py  render_pdf.py  render_revision_history.py  save_panel.py  validate_welds.py  weld_positions.py  weld_positions_to_canvas.py
src/weldb/: __init__.py  document.py  exceptions.py  export.py  panel.py  render.py  types.py  validation.py  weld_log.py  welds.py
src/wmdb/: __init__.py  exceptions.py  export.py  types.py
src/wmdb/boiler/: __init__.py  document.py  render.py  weld_log.py  welds.py
src/wmdb/iron/: __init__.py  document.py  render.py  welds.py
src/wmdb/pipeline/: __init__.py  document.py  render.py  welds.py
tests/: test_canvas.py  test_document.py  test_panel.py  test_query_welds.py  test_stateless_api.py  test_validation.py  test_welds_and_export.py
