[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weldb"
version = "0.1.0"
description = "Weld Map Database — YAML-based 2D weld maps for boiler repair (.weldb) that double as the static weld record."
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Larry" },
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
pdf = [
    "fpdf2>=2.7",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
