[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weldb"
version = "0.1.0"
description = "Weld Map Database — YAML-based 2D weld maps for boiler repair (.weldb) that double as the static weld record."
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Larry" },
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
pdf = [
    "fpdf2>=2.7",
]
# Local (stdio) MCP server. fpdf2 is needed for the PDF-rendering tools.
mcp = [
    "mcp>=1.2",
    "fpdf2>=2.7",
]
# Hostable streamable-HTTP transport for the MCP server (python mcp_app.py remote).
remote = [
    "mcp>=1.2",
    "fpdf2>=2.7",
    "uvicorn>=0.27",
    "starlette>=0.37",
]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
weldb-mcp = "mcp_app:main"

# mcp_app.py is a top-level module at the repo root (not under src/), so it must
# be listed explicitly alongside the src-layout package discovery for the
# weldb-mcp console script to import it.
[tool.setuptools]
py-modules = ["mcp_app"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
